Дополнил список скважин, вывел все на интерфейс.

--- a/conf/conf.yaml
+++ b/conf/conf.yaml
@@ -12,3 +12,46 @@ kis_boreholes:
   - "114-Э"
   - "115-Э"
   - "2-ПЭ-бис"
+pyat_boreholes:
+  - "Народный скв.1"
+  - "Народный скв.2"
+  - "Варвациевская"
+  - "Лермонтовский 2"
+  - "Лермонтовский старый"
+  - "29"
+  - "19"
+  - "4-Теплый Нарзан"
+  - "7-Теплый Нарзан"
+  - "1-Холодный нарзан"
+  - "24"
+  - "Красноармейская Новая"
+  - "17"
+  - "Радиоштольня-2"
+ess_boreholes:
+  - "2-Б"
+  - "66"
+  - "17-бис"
+  - "36-бис"
+  - "24-бис-1"
+  - "33-бис"
+  - "34-бис"
+  - "39-бис"
+  - "41-бис"
+  - "418-бис"
+  - "56"
+  - "57-РЭ-бис"
+  - "1-Э"
+  - "2-Э"
+  - "55"
+  - "1-КМВ-бис"
+jel_boreholes:
+  - "61"
+  - "69-бис"
+  - "69-бис-1"
+  - "59"
+  - "Славяновский"
+  - "Семашко"
+  - "1-Южная"
+  - "64"
+  - "Владимирский"
+  - "70"
